<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_uninstall_name">Presto Uninstall RC3</string>
    <string name="start_uninstall_button">Start Uninstall</string>
    <string name="uninstall_settings">Settings</string>
    <string name="check_direct_uninstall_method">Check it to use Direct Uninstall Method</string>
    <string name="direct_uninstall_method">Direct Uninstall Method</string>
    <string name="enable_direct_uninstall_method">Enable Direct Uninstall Method</string>
    <string name="uninstall_sort_settings">Sort List Settings</string>
    <string name="uninstall_sample_pref_sel_dialog_type">Sort Type</string>
    <string name="uninstall_sample_pref_click_pop_up_type">Select sort list type</string>
    <string name="uninstall_sample_pref_choose_number_type">Select method:</string>
    <string-array name="uninstall_numbersType">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="uninstall_numbernamesType">
        <item>Application Name</item>
        <item>Package Name</item>
        <item>Package Size</item>
    </string-array>
    <string name="uninstall_sample_pref_sel_dialog_order">Sort Order</string>
    <string name="uninstall_sample_pref_click_pop_up_order">Select sort list order</string>
    <string name="uninstall_sample_pref_choose_number_order">Select order:</string>
    <string-array name="uninstall_numbersOrder">
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="uninstall_numbernamesOrder">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
</resources>
